@@ -1,3 +1,9 @@
+2008-09-18  Alp Toker  <alp@nuanti.com>
+
+        Build fix for r36587. Add new sources (and sort the lists).
+
+        * GNUmakefile.am:
+
 2008-09-17  Sam Weinig  <sam@webkit.org>
 
         Fix Windows build.
